[package]
name = "rust-game"
version = "0.1.0"
authors = ["Tailcalled <tailcalled@gmail.com>", "Alice Ryhl <alice@ryhl.io>"]
edition = "2018"

[dependencies]
termion = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
crossbeam = "0.7"
get_if_addrs = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
atomic-take = "1.0"
rpds = { version = "0.7", features = ["serde"] }
archery = "0.3"
